fixed z-index on sticky nav

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -139,6 +139,7 @@ img {
 
 .mobilenav {
     background-color: white;
+    z-index: 110;
     width: 100%;
 
     &__toggle {
@@ -246,13 +247,6 @@ img {
     color: $primaryPink;
     display: inline-block;
 }
-
-// .mobilenav {
-//     background-color: white;
-//     z-index: 100;
-//     width: 100%;
-// }
-    
 
 // #mobilenav__icons--burger{
 //     color: $primaryPink;
